src/test/egern/success/if_statement.egern
var a = 3;
if (a == 3) {
    print(a);
}
print(a);
