src/test/egern/fail/assign_int_variable_to_boolean_fail.egern
var a = 3;
print(a);
a = true;
print(a);
